--- a/Aulas/2.CSS3/classes_ids.html
+++ b/Aulas/2.CSS3/classes_ids.html
@@ -57,7 +57,7 @@
         Donec gravida sapien nec ante tristique, non sodales mi
         sodales. Sed vehicula feugiat nisi, sed lacinia est tincidunt id.
         Proin vel tortor sed urna pretium vulputate. Nullam mi tortor,
-        condimentum et aliquet sed, tincidunt sed odio. Nullam nunc ligula,
+        condimentum et aliquuet sed, tincidunt sed odio. Nullam nunc ligula,
         sollicitudin nec mi non, consectetur tincidunt nibh. Proin viverra
         lacinia cursus.
     </p>
