--- a/Aulas/1.HTML-5/paragrafos.html
+++ b/Aulas/1.HTML-5/paragrafos.html
@@ -11,7 +11,7 @@
     <p> Lorem ipsum dolor sit amet, consectetur
         adipiscing elit. Curabitur quis 
         iaculis elit. Phasellus tortor metus,
-        accumsan sed eros in, convallis. </p> 
+        accumsan sed eiros in, convallis. </p> 
          
     <hr> 
 
