--- a/Aulas/1.HTML-5/imagens.html
+++ b/Aulas/1.HTML-5/imagens.html
@@ -2,11 +2,12 @@
 <html> 
 
  <head> 
-     <title>Paragrafos</title> 
+     <title>Imagens</title> 
      <meta charset="utf-8"> 
  </head> 
   
- <body>
+ <body> 
+     <img src="Curso-Dev-Web/imagens/ferrari.jpg ">
         
  </body> 
 
