--- a/Aulas/1.HTML-5/imagens.html
+++ b/Aulas/1.HTML-5/imagens.html
@@ -7,7 +7,7 @@
  </head> 
   
  <body> 
-     <img src="imagens/ferrari.jpg ">
+     <img src="imagens/ferrari.jpg " width="600">
         
  </body> 
 
