--- a/Aulas/2.CSS3/inline_style.html
+++ b/Aulas/2.CSS3/inline_style.html
@@ -4,7 +4,11 @@
 <head>
     <title>Inline Style</title>
     <meta charset="utf-8">
-
+    <style> 
+    h1 {
+      color: red;   
+    }
+     </style>
 </head>
 
 <body>
