--- a/Aulas/2.CSS3/Box Model/index.html
+++ b/Aulas/2.CSS3/Box Model/index.html
@@ -6,8 +6,9 @@
          <link rel="stylesheet" type="text/css" href="estilo.css">
     </head> 
     <body>
-        <!-- <div class="conteudo">It is a long established fact that a reader will be distracted.</div> 
-         <div class="conteudo2">Many desktop publishing packages and web page editors.</div> 
+        <!--  
+        <div class="conteudo">It is a long established fact that a reader will be distracted.</div> 
+        <div class="conteudo2">Many desktop publishing packages and web page editors.</div> 
          <p>Lfdhgjkfghjfkdhgjfdhgjfhgj</p> 
         --> 
          
