--- a/Aulas/2.CSS3/Elementos Flutuantes/index.html
+++ b/Aulas/2.CSS3/Elementos Flutuantes/index.html
@@ -26,11 +26,22 @@
        </div><br><br> 
        <div class="conteudo3">
         Conteúdo 7
-   </div> 
-   <div class="conteudo3"> 
+        </div> 
+        <div class="conteudo3"> 
        Conteúdo 8
-   </div> 
-   <div class="conteudo3"> 
+        </div> 
+        <div class="conteudo3"> 
        Conteúdo 9
+        </div>
+        <div class="clear"></div>
+        <div class="conteudo1">
+            Conteúdo 10
+       </div> 
+       <div class="conteudo1"> 
+           Conteúdo 11
+       </div> 
+       <div class="conteudo1"> 
+           Conteúdo 12 
+        </div>
     </body>
 </html>
