--- a/Aulas/2.CSS3/Elementos Flutuantes/posicionamentos.html
+++ b/Aulas/2.CSS3/Elementos Flutuantes/posicionamentos.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Posicionamentos (static, relative, absolute e fixed)</title>
+        <title>Posicionamentos (static(default), relative, absolute e fixed)</title>
         <meta charset="utf-8">
          <style> 
          body{ 
@@ -39,7 +39,7 @@
          .fixed {
               border: 1px solid red; 
               background: #f2f2f2; 
-              position: fixed; 
+              position: fixed; /*fixo baseado na janela*/
               top: 0px;
               right:0px;
               margin:0px;
