--- a/Projetos/P3-Tec-Blog/index.html
+++ b/Projetos/P3-Tec-Blog/index.html
@@ -20,6 +20,56 @@
             <a href="informatica.html">Eletrônicos</a> 
 
         </div> 
+    </div> 
+    <div id="areaPrincipal"> 
+        <div id="areaPostagens"> 
+            <!--Abertura postagem-->
+             <div class="postagem"> 
+                 <h2>Titulo da Postagem 1</h2>
+                  <span class="dataPostagem">postado 16 Agosto 2021</span> 
+                  <img width="620" src="imagens/photo1.jpg"> 
+                  <p>
+                    Capitalize on the scalable Kafka. That's how you maximize the potential of ICO. Jump on the unsaturated Kubernetes ASAP. There is no other industry equally disruptive. Jump on the unsaturated Kubernetes ASAP. There is no other industry equally disruptive. Capitalize on the SaaS Internet of Things. That's how you maximize the potential of Cloud.
+                  </p> 
+                  <a href="">Leia mais</a>
+             </div> <!--Fechamento postagem--> 
+             <div class="postagem"> 
+                <h2>Titulo da Postagem 2</h2>
+                 <span class="dataPostagem">postado 18 Agosto 2021</span> 
+                 <img width="620" src="imagens/photo2.jpg"> 
+                 <p>
+                   Capitalize on the scalable Kafka. That's how you maximize the potential of ICO. Jump on the unsaturated Kubernetes ASAP. There is no other industry equally disruptive. Jump on the unsaturated Kubernetes ASAP. There is no other industry equally disruptive. Capitalize on the SaaS Internet of Things. That's how you maximize the potential of Cloud.
+                 </p> 
+                 <a href="">Leia mais</a>
+            </div> <!--Fechamento postagem-->
+        </div> 
+        <div id="areaLateral">  
+            <div class="conteudoLateral">
+                    <h3>Postagens recentes</h3> 
+                <div> 
+                    <p class="textoLateral">Use the multi-byte USB feed, then you can copy the 56k circuit!</p> 
+                    <a href="">Leia mais</a>
+                </div>
+                <div> 
+                <p class="textoLateral">Use the multi-byte USB feed, then you can copy the 56k circuit!</p> 
+                <a href="">Leia mais</a>
+                </div>
+            </div> 
+            <div class="conteudoLateral"> 
+                <h3>Categorias</h3> 
+                 
+                <a href="">Jogos</a><br>
+                <a href="">Celulares</a><br> 
+                <a href="">Informatica</a><br>
+                <a href="">Eletronicos</a><br>
+                <a href="">Jogos</a><br>
+                <a href="">Mais</a><br>
+             
+            </div>
+        </div> 
+        <div id="rodape"> 
+            Todos os direitos reservados
+        </div>
     </div>    
 </body>
 </html>
