--- a/Aulas/3.CSS3 intermediário e avançado/Barra Navegação Horizontal/noticias.html
+++ b/Aulas/3.CSS3 intermediário e avançado/Barra Navegação Horizontal/noticias.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Navegação Horizontal</title>
+    <title>Navegação Vertical</title>
 </head>
-<body id="home"> 
-            <h2><H1>Home</H1></h2>  
+<body id="noticias"> 
+            <h2>Notícias</h2>  
             <ul id="navegacao"> 
                 <li class="home primeiro"> 
                     <a href="index.html">Home</a> 
