--- a/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/index.html
+++ b/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/index.html
@@ -1,12 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Navegação com Abas</title>
 </head>
-<body>
-    
+<body id="home"> 
+            <h2><H1>Home</H1></h2>  
+            <ul id="navegacao"> 
+                <li class="home"> 
+                    <a href="index.html">Home</a> 
+                </li> 
+                <li class="sobre">
+                    <a href="sobre.html">Sobre</a>
+                </li> 
+                <li class="servicos"> 
+                    <a href="servicos.html">Serviços</a> 
+                </li> 
+                <li class="noticias">
+                    <a href="noticias.html">Notícias</a> 
+                </li> 
+                <li class="contatos"> 
+                    <a href="contatos.html">Contato</a>
+                </li>
+            </ul>
+    <!-- 
+    <h2> Lista de atividade</h2> 
+    <ul> 
+        <li>Ir ao dentista</li> 
+        <li> Ir ao supermercado</li> 
+        <li>Fazer o almoço</li> 
+        <li>Assistir série</li> 
+        <li> Correr no parque</li> 
+    </ul> -->
 </body>
 </html>
