--- a/Aulas/3.CSS3 intermediário e avançado/Barra Navegação Vertical/index.html
+++ b/Aulas/3.CSS3 intermediário e avançado/Barra Navegação Vertical/index.html
@@ -8,7 +8,7 @@
     <title>Navegação Vertical</title>
 </head>
 <body id="home"> 
-            <h2><H1>Home</H1></h2>  
+            <h2>Home</h2>  
             <ul id="navegacao"> 
                 <li class="home"> 
                     <a href="index.html">Home</a> 
