--- a/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/servicos.html
+++ b/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/servicos.html
@@ -8,15 +8,15 @@
     <title>Navegação com Abas</title>
 </head>
 <body id="home"> 
-            <h2>Home</h2>  
+            <h2>Serviços</h2>  
             <ul> 
-                <li id="atual"> 
+                <li > 
                     <a href="index.html">Home</a> 
                 </li> 
                 <li>
                     <a href="sobre.html">Sobre</a>
                 </li> 
-                <li> 
+                <li id="atual"> 
                     <a href="servicos.html">Serviços</a> 
                 </li> 
                 <li>
