--- a/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/contatos.html
+++ b/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/contatos.html
@@ -8,9 +8,9 @@
     <title>Navegação com Abas</title>
 </head>
 <body id="home"> 
-            <h2>Home</h2>  
+            <h2>Contatos</h2>  
             <ul> 
-                <li id="atual"> 
+                <li > 
                     <a href="index.html">Home</a> 
                 </li> 
                 <li>
@@ -22,7 +22,7 @@
                 <li>
                     <a href="noticias.html">Notícias</a> 
                 </li> 
-                <li> 
+                <li id="atual"> 
                     <a href="contatos.html">Contato</a>
                 </li>
             </ul>
