--- a/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/noticias.html
+++ b/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/noticias.html
@@ -8,9 +8,9 @@
     <title>Navegação com Abas</title>
 </head>
 <body id="home"> 
-            <h2>Home</h2>  
+            <h2>Notícias</h2>  
             <ul> 
-                <li id="atual"> 
+                <li > 
                     <a href="index.html">Home</a> 
                 </li> 
                 <li>
@@ -19,7 +19,7 @@
                 <li> 
                     <a href="servicos.html">Serviços</a> 
                 </li> 
-                <li>
+                <li id="atual">
                     <a href="noticias.html">Notícias</a> 
                 </li> 
                 <li> 
