--- a/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/sobre.html
+++ b/Aulas/3.CSS3 intermediário e avançado/Navegação com abas/sobre.html
@@ -8,12 +8,12 @@
     <title>Navegação com Abas</title>
 </head>
 <body id="home"> 
-            <h2>Home</h2>  
+            <h2>Sobre</h2>  
             <ul> 
-                <li id="atual"> 
+                <li> 
                     <a href="index.html">Home</a> 
                 </li> 
-                <li>
+                <li id="atual">
                     <a href="sobre.html">Sobre</a>
                 </li> 
                 <li> 
